[build-system]
requires = ["setuptools>=68", "wheel>=0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sync"
version = "0.1.0"
description = "Utilities for building an auth layer for Agents using Veriphi"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
  "veriphi_core==0.1.1",
]
authors = [
  {name = "Veriphi"},
]
keywords = ["veriphi", "agents", "orchestration"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/veriphi/agent-sync"
issues = "https://github.com/veriphi/agent-sync/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

